first-commit-lucas
no andaba el autoload, agrego carpeta clases..

Tengo que subir todos los archivos porque le cambié los permisos a toda la carpeta y me lo toma como que le hago cambios..

--- a/admin/api/composer.json
+++ b/admin/api/composer.json
@@ -25,6 +25,11 @@
             "Tests\\": "tests/"
         }
     },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/Classes/"
+        }
+    },
     "config": {
         "process-timeout" : 0
     },
